tests/resolver/error/not_found.nk
let a (b: Int) (c: Int) = d